<resources>
    <string name="app_name">Pokedex</string>
    <string name="textview">TextView</string>
    <string name="imageview">ImageView</string>
    <string name="image">Image</string>
    <string name="type">Type</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="evolution">Evolution</string>
    <string name="button">Button</string>
    <string name="type2">Type2</string>
    <string name="stats">Stats</string>
    <string name="evolution_chain">Evolution Chain:</string>
    <string name="effect">Effect</string>
    <string name="share">Share</string>
</resources>
